src/objects/Forcast__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <defaultValue>Today() + 30</defaultValue>
        <label>End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_year__c</fullName>
        <description>Id of fiscalyear</description>
        <label>Fiscal year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Forcast</relationshipLabel>
        <relationshipName>Forcast</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Forcast</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forcast</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>